# avr

./: README.md
app/count/: CMakeLists.txt
app/count/include/: cppfix.hpp
app/count/src/: CMakeLists.txt  main.cpp
app/oled_viewfont/: CMakeLists.txt
app/oled_viewfont/lib/oled_i2c/: hw_avr.hpp  oled_i2c.cpp
app/oled_viewfont/lib/twi_master/: twi_master.hpp
app/oled_viewfont/src/: CMakeLists.txt  oled_i2c_viewfont.cpp  smallfont.cpp
app/rotary_table/: CMakeLists.txt
app/rotary_table/src/: CMakeLists.txt  defaultfonts.cpp  rotary_table.cpp
cmake/: generic-gcc-avr.cmake
lib/oled_i2c/: CMakeLists.txt  hw_avr_defines.hpp  oled_i2c.hpp
lib/ssd1306/: CMakeLists.txt  ssd1306.cpp  ssd1306.hpp
lib/twi_master/: CMakeLists.txt  twi_master.cpp  twi_master.hpp
