#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   ssdmain
   main.cpp
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
  ssdmain-${AVR_MCU}.elf
  ssd1306-${AVR_MCU}
  twi_master-${AVR_MCU}
  )
